doc/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-proxy
  labels:
    app.kubernetes.io/name: deploy-proxy
spec:
  selector:
    app: deploy-proxy
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
